--- a/src/style.css
+++ b/src/style.css
@@ -73,3 +73,20 @@ body,
     border-radius: 8px;
     color: #fff;
 }
+
+@media (max-width: 768px) {
+    .container {
+        margin: 25px;
+    }
+
+    .heading {
+        font-size: 30px;
+        margin: auto auto 20px auto;
+        text-align: center;
+    }
+
+    .click-me,
+    .code {
+        font-size: 16px;
+    }
+}
