Add jumping animation

--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,7 @@ body,
 .code i {
     width: 0px;
     opacity: 0;
+    margin: 0;
 }
 
 .code span:hover > i {
@@ -114,14 +115,17 @@ body,
     from {
         opacity: 0;
         width: 0px;
+        margin: 0;
     }
 
     30% {
         width: auto;
         opacity: 0;
+        margin: auto 10px;
     }
-
+    
     to {
         opacity: 1;
+        margin: auto 4px auto 6px;
     }
 }
